# sdtp-client

./: README.md  example.env  nsg-client-test.py  openapi.yaml  pyproject.toml  requirements.txt  setup.cfg  test-requirements.txt
.github/workflows/: lint.yml  test.yml
sdtp_client/: client.py
tests/: conftest.py  test_s3_sdtp_client.py  test_sdtp_client.py
